@@ -4,8 +4,11 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import vocaltech.demo.controller.data.request.LeadRequest;
-import vocaltech.demo.controller.data.response.LeadResponse;
+import vocaltech.demo.controller.data.request.EntrepreneurLeadRequest;
+import vocaltech.demo.controller.data.request.ExecutiveLeadRequest;
+import vocaltech.demo.controller.data.response.AllLeadsResponse;
+import vocaltech.demo.controller.data.response.EntrepreneurLeadResponse;
+import vocaltech.demo.controller.data.response.ExecutiveLeadResponse;
 import vocaltech.demo.email.EmailTemplates;
 import vocaltech.demo.mapper.LeadMapper;
 import vocaltech.demo.persistence.entity.*;
@@ -18,56 +21,57 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.ThreadLocalRandom;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/leads")
 @RequiredArgsConstructor
 public class LeadController {
-
-    private final FormServiceImpl formService;
-    private final AdminDestinyServiceImpl adminDestinyService;
     private final RoleServiceImpl roleService;
     private final OptionServiceImpl optionService;
     private final EmailService emailService;
-
     private final LeadServiceImpl leadService;
-
+    private final ProfileServiceImpl profileService;
+    private final EntrepreneurInputsServiceImpl entrepreneurInputsService;
+    private final ExecutiveInputsServiceImpl executiveInputsService;
     private final LeadMapper leadMapper;
 
-    @PostMapping
-    public ResponseEntity<LeadResponse> createLead(@RequestBody LeadRequest request) {
+
+    @PostMapping("/entrepreneur")
+    public ResponseEntity<EntrepreneurLeadResponse> createEntrepreneurLead(
+            @RequestBody EntrepreneurLeadRequest request
+    ) {
 
         /* Persist Lead */
 
-        Form form = this.formService.getForm(request.getProfileId(), request.getServiceId());
+        Profile profile = this.profileService.getProfile(1L);
+
+        EntrepreneurInputs entrepreneurInputs = EntrepreneurInputs.builder()
+                .projectSectors(request.getProjectSector())
+                .email(request.getEmail())
+                .phone(request.getPhone())
+                .build();
+        entrepreneurInputs = this.entrepreneurInputsService.save(entrepreneurInputs);
 
         Set<Option> answers = this.optionService.getOptions(request.getSelectedOptions());
 
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd-MM-yyyy");
         String creationDate = LocalDateTime.now().format(formatter);
+
         Lead lead = Lead.builder()
-                .form(form)
+                .fullname(request.getFullname())
+                .creationDate(creationDate)
+                .profile(profile)
                 .answers(answers)
-                .email(request.getEmail())
                 .voiceRecording(VoiceRecording.builder()
                         .path(request.getVoiceRecordingPath()).build()
                 )
-                .diagnostic(true)
-                .fullname(request.getFullname())
-                .creationDate(creationDate)
+                .socialMedia(request.getSocialMedia())
+                .profileInputsId(entrepreneurInputs.getId())
                 .build();
 
         lead = this.leadService.createLead(lead);
-        LeadResponse response = this.leadMapper.toLeadResponse(lead);
 
-        Set<Long> roleIds = this.adminDestinyService.getRoleIdsByFormId(lead.getForm().getId());
-
-        Set<Role> roles = roleIds.stream().map(
-                this.roleService::getRole
-        ).collect(Collectors.toSet());
-
-        response.setRoles(roles);
+        EntrepreneurLeadResponse response = this.leadMapper.toEntrepreneurLeadResponse(lead, entrepreneurInputs);
 
         /* Send Templates by email */
 
@@ -78,41 +82,111 @@ public class LeadController {
                 })
                 .filter(Objects::nonNull).toList();
 
-
-        if(!templates.isEmpty()){
+        if (!templates.isEmpty()) {
             String emailTemplate = EmailTemplates.getDiagnosticResultsEmailTemplate(lead.getFullname(), templates);
             this.emailService.sendEmail(
-                    lead.getEmail(),
+                    response.getEmail(),
                     "Resultado de Diagnóstico Vocaltech.",
                     emailTemplate);
 
             return ResponseEntity.status(HttpStatus.CREATED).body(response);
-
         }
 
+        return new ResponseEntity<>(response, HttpStatus.CREATED);
 
+    }
+
+    @PostMapping("/executive")
+    public ResponseEntity<ExecutiveLeadResponse> createExecutiveLead(
+            @RequestBody ExecutiveLeadRequest request
+    ) {
+
+        /* Persist Lead */
+
+        Profile profile = this.profileService.getProfile(1L);
+
+        ExecutiveInputs executiveInputs = ExecutiveInputs.builder()
+                .occupation(request.getOccupation())
+                .enterpriseName(request.getEnterpriseName())
+                .enterpriseEmail(request.getEnterpriseEmail())
+                .enterpriseSector(request.getEnterpriseSector())
+                .teamQuantity(request.getTeamQuantity())
+                .build();
+        executiveInputs = this.executiveInputsService.save(executiveInputs);
+
+        Set<Option> answers = this.optionService.getOptions(request.getSelectedOptions());
+
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd-MM-yyyy");
+        String creationDate = LocalDateTime.now().format(formatter);
+
+        Lead lead = Lead.builder()
+                .fullname(request.getFullname())
+                .creationDate(creationDate)
+                .profile(profile)
+                .answers(answers)
+                .voiceRecording(VoiceRecording.builder()
+                        .path(request.getVoiceRecordingPath()).build()
+                )
+                .socialMedia(request.getSocialMedia())
+                .profileInputsId(executiveInputs.getId())
+                .build();
+
+        lead = this.leadService.createLead(lead);
+
+        ExecutiveLeadResponse response = this.leadMapper.toExecutiveLeadResponse(lead, executiveInputs);
+
+        /* Send Templates by email */
+
+        List<Template> templates = answers.stream()
+                .map(answer -> {
+                    List<Template> templateList = answer.getTemplates().stream().toList();
+                    return templateList.isEmpty() ? null : templateList.get(ThreadLocalRandom.current().nextInt(templateList.size()));
+                })
+                .filter(Objects::nonNull).toList();
+
+        if (!templates.isEmpty()) {
+            String emailTemplate = EmailTemplates.getDiagnosticResultsEmailTemplate(lead.getFullname(), templates);
+            this.emailService.sendEmail(
+                    response.getEnterpriseEmail(),
+                    "Resultado de Diagnóstico Vocaltech.",
+                    emailTemplate);
+
+            return ResponseEntity.status(HttpStatus.CREATED).body(response);
+        }
 
         return new ResponseEntity<>(response, HttpStatus.CREATED);
+
     }
 
     @GetMapping
-    public ResponseEntity<List<LeadResponse>> getLeads() {
+    public ResponseEntity<AllLeadsResponse> getAllLeads() {
+
         List<Lead> leadList = this.leadService.getLeads();
 
-        List<LeadResponse> response = leadList.stream().map(lead ->
-                {
-                    Set<Long> roleIds = this.adminDestinyService.getRoleIdsByFormId(lead.getForm().getId());
+        List<EntrepreneurLeadResponse> entrepreneurLeadResponses = leadList.stream()
+                .filter(lead -> lead.getProfile().getId() == 1)
+                .map(lead -> {
+                    EntrepreneurInputs entrepreneurInputs = this.entrepreneurInputsService
+                            .getEntrepreneurInputsById(lead.getProfileInputsId());
+                    return this.leadMapper.toEntrepreneurLeadResponse(lead, entrepreneurInputs);
 
-                    Set<Role> roles = roleIds.stream().map(
-                            this.roleService::getRole
-                    ).collect(Collectors.toSet());
+                }).toList();
 
-                    LeadResponse leadResponse = this.leadMapper.toLeadResponse(lead);
-                    leadResponse.setRoles(roles);
-                    return leadResponse;
-                }
-        ).collect(Collectors.toList());
+        List<ExecutiveLeadResponse> executiveLeadResponses = leadList.stream()
+                .filter(lead -> lead.getProfile().getId() == 2)
+                .map(lead -> {
+                    ExecutiveInputs executiveInputs = this.executiveInputsService
+                            .getExecutiveInputsById(lead.getProfileInputsId());
+                    return this.leadMapper.toExecutiveLeadResponse(lead, executiveInputs);
+
+                }).toList();
+
+        AllLeadsResponse response = AllLeadsResponse.builder()
+                .entrepreneurLeads(entrepreneurLeadResponses)
+                .executiveLeads(executiveLeadResponses)
+                .build();
 
         return ResponseEntity.ok(response);
     }
+
 }
